[package]
name = "venkeybind"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
uiohook-sys = { path = "./uiohook-sys" }
thiserror = "1.0.63"
node-bindgen = { version = "6.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
xcb = { version = "1.4.0", features = ["x11", "xkb", "as-raw-xcb-connection"] }
xkbcommon = { version = "0.8.0", features = ["x11"] }
ashpd = "0.9.1"

[features]
default = ["node"]
node = ["dep:node-bindgen"]

[workspace]
members = [
    "./uiohook-sys"
]

[build-dependencies]
node-bindgen = { version = "6.0", default-features = false, features = ["build"], optional = true }
